// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing issue_comment_created event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/issue_comment_created.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"issue_comment\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing issue_comment_created event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/issue_comment_created.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"issue_comment\\"
  }
}"
`;

exports[`Testing issue_comment_created event... throws ERROR with no inputs NOT PUSH or PULL_REQUEST event 1`] = `
"{
  \\"error\\": \\"500/inferInput Error\\",
  \\"from\\": \\"inferInput\\",
  \\"message\\": \\"Received event from issue_comment, but received no inputs. {event_name:issue_comment, pr: NaN, before:, after:}\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing issue_comment_edited event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/issue_comment_edited.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"issue_comment\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/issue_comment_edited.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"issue_comment\\"
  }
}"
`;

exports[`Testing issue_comment_edited event... throws ERROR with no inputs NOT PUSH or PULL_REQUEST event 1`] = `
"{
  \\"error\\": \\"500/inferInput Error\\",
  \\"from\\": \\"inferInput\\",
  \\"message\\": \\"Received event from issue_comment, but received no inputs. {event_name:issue_comment, pr: NaN, before:, after:}\\",
  \\"payload\\": \\"\\"
}"
`;

exports[`Testing pull_request_opened event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_opened.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing pull_request_opened event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_opened.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_reopened.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing pull_request_reopened event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_reopened.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_synchronize.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing pull_request_synchronize event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/pull_request_synchronize.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"pull_request\\"
  }
}"
`;

exports[`Testing push event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/push.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"push\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing push event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/push.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"push\\"
  }
}"
`;

exports[`Testing push_merge event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/push_merge.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"push\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing push_merge event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/push_merge.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"push\\"
  }
}"
`;

exports[`Testing schedule event... Throws error with empty string ("") process.env["GITHUB_TOKEN"] or empty string ("") input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_TOKEN\\": \\"\\",
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/schedule.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"schedule\\",
    \\"INPUT_GITHUBTOKEN\\": \\"\\"
  }
}"
`;

exports[`Testing schedule event... Throws error with no token (undefined) process.env["GITHUB_TOKEN"] or (undefined) input githubToken 1`] = `
"{
  \\"error\\": \\"500/getInputs Error\\",
  \\"from\\": \\"getInputs\\",
  \\"message\\": \\"Received an issue getting action inputs.\\",
  \\"payload\\": {
    \\"GITHUB_WORKSPACE\\": \\"/Users/bkillian/repos/file-changes-action/tests/workspace/github\\",
    \\"GITHUB_REPOSITORY\\": \\"trilom-test/file-changes-action\\",
    \\"GITHUB_ACTION\\": \\"file-changes-action\\",
    \\"GITHUB_EVENT_PATH\\": \\"/Users/bkillian/repos/file-changes-action/tests/payloads/events/schedule.json\\",
    \\"GITHUB_EVENT_NAME\\": \\"schedule\\"
  }
}"
`;

exports[`Testing schedule event... throws ERROR with no inputs NOT PUSH or PULL_REQUEST event 1`] = `
"{
  \\"error\\": \\"500/inferInput Error\\",
  \\"from\\": \\"inferInput\\",
  \\"message\\": \\"Received event from schedule, but received no inputs. {event_name:schedule, pr: NaN, before:, after:}\\",
  \\"payload\\": \\"\\"
}"
`;
